# mini

./: .gitignore  Cargo.toml  Makefile  README.md
example/: simple.ts  simple_ts.ts
src/: ast.rs  builtin.rs  builtins.rs  cli.rs  error.rs  gen.rs  ir.rs  lib.rs  main.rs  mini.lalrpop  parser.lalrpop  st.rs  st_analyzer.rs  value.rs
std/: array.h  defs.h  echo.h  gc.h  number.h  object.h  ops.h  print.h  std.c  std.ts  str.h  string.h  val.h
test/: example.c
