[package]
name = "mini"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
by_address = { version = "1.1.0" }
clap = { version = "3.2.23" }
colored = { version = "2.0.0"}
generational-arena = { version = "0.2.8" }
indexmap = { version = "1.9.2"}
inkwell = { version = "0.1.0", features = ["llvm14-0"] }
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
regex = { version = "1" }

[build-dependencies]
lalrpop = { version = "0.19.8", features = ["lexer"] }

[workspace]
members = ["library"]
default-members = ["library"]
